# dagster-quickstart

./: .env.example  .gitignore  README.md  pyproject.toml  renovate.json
dagster_project/: definitions.py
dagster_project/defs/assets/json_placeholder/: posts.py
dagster_project/defs/resources/: __init__.py  _resources.py  json_placeholder_api.py
dagster_project_tests/test_resources/: test_json_placeholder_api.py
src/dagster_project/: assets.py  definitions.py
