[project]
name = "dagster_cookiecutter"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = ["dagster==1.12.19"]

[dependency-groups]
dev = ["dagster-webserver==1.12.19", "dagster-dg-cli==1.12.19", "pytest==9.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = ["dagster_project.components.*"]

[tool.uv]
required-version = "0.10.8"
